manifests/oke-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${microservice_name}
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ${microservice_name}
  template:
    metadata:
      labels:
        app: ${microservice_name}
    spec:
      containers:
      - name: ${microservice_name}-container
        image: ${OCIR_REGION}/${OCIR_STORAGE_NAMESPACE}/${MY_INITIALS}/${APP_MICROSERVICE}:${BUILDRUN_VERSION}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:          
          requests:
            cpu: 250m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 1000Mi
      imagePullSecrets:
        - name: my-ocirsecret
---
apiVersion: v1
kind: Service
metadata:
  name: ${microservice_name}-svc-lb
  annotations:
    oci.oraclecloud.com/load-balancer-type: "lb"
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
    #service.beta.kubernetes.io/oci-load-balancer-backend-protocol: "HTTP" #This line is required to integrate with WAF service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: ${microservice_name}
